# anp-examples

./: .env.example  .gitignore  LICENSE  README.md  anp-examples.log.md  config.py  nginx_config.conf  pyproject.toml  test_anp_tool.py
ad-json/: hotel.json  room.json
ad-json/api/: booking-interface.yaml  nl-interface.yaml  search-interface.yaml
anp_examples/: __init__.py  anp_agent.py  anp_tool.py  simple_example.py
anp_examples/utils/: __init__.py  log_base.py
doc/: 酒店demo.md
examples_code/: README.md  README_EN.md  __init__.py  client.py  did_auth_client.py  did_auth_middleware.py  jwt_config.py  private_key.pem  public_key.pem  run_client.py  run_server.py  server.py
use_did_test_public/: did.json  key-1_private.pem  private_keys.json
web_app/: README.md  run.sh  run_with_poetry.sh
web_app/backend/: anp_examples_backend.py  hotel_order_api.py  main.py  models.py  requirements.txt  server.py  static_server.py
web_app/frontend/: agent-doc-tree.html  index.html  jsonld-network.html  jsonld-viewer.html
web_app/frontend/js/: main.js
web_app/static/: style.css  utils.js
