[tool.poetry]
name = "anp-examples"
version = "0.1.0"
description = "Agent Network Protocol Examples"
authors = ["changshan <chgaowei@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.115.4"
pyjwt = "^2.8.0"
uvicorn = "^0.32.0"
requests = "^2.31.0"
agent-connect = "^0.3.2"
cryptography = "^42.0.0"
aiohttp = "^3.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
