[tool.poetry]
name = "anp-examples"
version = "0.1.0"
description = "Agent Network Protocol Examples"
authors = ["changshan <chgaowei@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.105.0"
pyjwt = "^2.8.0"
uvicorn = "^0.23.2"
requests = "^2.31.0"
agent-connect = "^0.3.5"
cryptography = ">=43.0.3,<44.0.0"
aiohttp = "^3.8.5"
openai = "^1.3.7"
pyyaml = "^6.0"
python-dotenv = "^1.0.0"
pydantic = "^2.4.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
